# Agents-Code-Review

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  sum.py  test-script.py
.github/scripts/: publish-ai-review.js
.github/workflows/: ai-review.yml
ollama/: README.md
src/: demo-script.py  domain.py  main.py
src/context_builder/: builder.py
src/filters/: filter.py
src/policy/: manager.py
src/providers/: base.py  github_provider.py
src/renderer/: renderer.py
src/retrieval/: engine.py
src/review/: analyzer.py  llm.py
src/safety/: env_loader.py  utils.py
tests/: test_analyzer_context.py  test_context_builder.py  test_flow.py  test_llm_client.py  test_safety.py
